--- a/src/styles/pages/info.scss
+++ b/src/styles/pages/info.scss
@@ -46,85 +46,74 @@
   }
 
   .content {
-    position: absolute;
-    top: 44px;
-    left: 0;
-    width: 100vw;
-    min-height: calc(100vh - 104px);
+    position: relative;
+    margin-top: -3px;
+    height: calc(100vh - 124px);
   }
 
   .content > ul {
     list-style: none;
     margin: 0;
     padding: 0;
+    height: 100%;
   }
 
   .content > ul > li {
     display: none;
+    height: 100%;
   }
 
   .content > ul > li.selected {
     display: block;
   }
 
-  .chat-container {
-    position: absolute;
-    top: 82px;
-    left: 0;
-    width: 100vw;
-    height: calc(100vh - 206px);
-    overflow-y: auto;
-  }
-
-  .chat {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: calc(100vw - 32px);
-    max-width: 720px;
-    min-height: 100%;
+  #info-tabpanel-chat.selected {
     display: flex;
     flex-direction: column;
-    justify-content: flex-end;
-    align-items: flex-start;
-    margin: 0 16px;
   }
 
   .chat-header {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100vw;
+    flex: 0;
+    width: 100%;
+    height: 82px;
     background-color: #e2eff2;
     display: flex;
     align-items: center;
-    z-index: 3;
+
+    & img {
+      height: 82px;
+      padding: 4px;
+      width: auto;
+    }
+
+    & h3 {
+      color: white;
+      font-size: 20px;
+      text-shadow:
+        -1px -1px 0 #000,
+        1px -1px 0 #000,
+        -1px 2px 0 #000,
+        1px 2px 0 #000;
+    }
   }
 
-  .chat-header img {
-    height: 82px;
-    padding: 4px;
-    width: auto;
-  }
-
-  .chat-header h3 {
-    color: white;
-    font-size: 20px;
-    text-shadow:
-      -1px -1px 0 #000,
-      1px -1px 0 #000,
-      -1px 2px 0 #000,
-      1px 2px 0 #000;
+  .chat {
+    flex: 1;
+    overflow-y: auto;
+    width: calc(100% - 32px);
+    max-width: 720px;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    // justify-content: flex-end;
+    margin: 0 16px;
   }
 
   .info-box-container {
     background-color: #e2eff2;
-    position: absolute;
-    top: 0;
-    left: 0;
     padding: 8px 0;
     width: 100%;
-    height: calc(100% - 16px);
+    height: 100%;
     overflow-y: auto;
     display: flex;
     flex-direction: column;
